--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,7 @@
 name: Java CI with Maven
 permissions:
   contents: read
+  security-events: write  # For uploading code scanning results
 
 on:
   push:
