Update permissions in Maven CI workflow
Changed permissions from read to write for contents.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,8 +8,7 @@
 
 name: Java CI with Maven
 permissions:
-  contents: read
-  security-events: write  # For uploading code scanning results
+  contents: write
 
 on:
   push:
